--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@ function openGame() {
 	win.document.body.appendChild(iframe)
 }
 </script>
-
+<hr>
+<p>
+silly billy mod cuz its lit peak
+</p>
+<iframe src="https://fnf.kdata1.com/2024/silly-billy-vs-yourself/1/" frameborder="0" scrolling="yes" width="900" id="game2" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">></iframe>
+<hr>
+<button onclick="openGame()" font-size: 26px; width:50%; cursor: pointer; border-radius: 10px;"> fullscreen ts </button>
+<script>
+function openGame() {
+	var win = window.open ()
+	var url = "https://fnf.kdata1.com/2024/fnf/530/"
+	var iframe = win.document.createElement('iframe')
+	iframe.style.width = "100%"
+	iframe.style.height = "100%"
+	iframe.style.border = "none"
+	iframe.src = url
+	iframe.src = url
+	win.document.body.appendChild(iframe)
+	<hr>
 </html>
+
+
 
